# PBjam

./: .gitignore  .travis.yml  CONTRIBUTING.rst  Example peak bag.ipynb  Example use or example.ipynb  Example-Star.ipynb  Example.ipynb  Example10.ipynb  ExampleSC.ipynb  LICENSE  MANIFEST.in  README.md  README.rst  Untitled.ipynb  VISION.rst  authors.csv  downloading_data.ipynb  example-Echelle.ipynb  example-Star.ipynb  example-illegal-inversion.ipynb  example-modeID-KIC10018963.ipynb  example-modeID-KIC11137075.ipynb  example-modeID-KIC11395018.ipynb  example-modeID-KIC2991448.ipynb  example-modeID-KIC4638884.ipynb  example-modeID-KIC6442183.ipynb  example-modeID-KIC7174707.ipynb  example-modeID-KIC7747078.ipynb  example-modeID-KIC7976303.ipynb  example-modeID-KIC8077137.ipynb  example-modeID-KIC8524425.ipynb  example-modeID-KIC8554498.ipynb  example-modeID-KIC9414417.ipynb  example-modeID.ipynb  example-nan_frequency.ipynb  example.ipynb  grid_comparison.ipynb  header.txt  prior_data.csv  pyproject.toml  (+8 more)
Examples/: ASY Peakbag example.ipynb  Example PB pickle.ipynb  Example-Star-API-K2.ipynb  Example-Star-API-K2_1.ipynb  Example-Star-API-Kepler.ipynb  Example-Star-API-TESS.ipynb  Example-Star-API.ipynb  Example-Star.ipynb  Example-TooManyOrders.ipynb  Example-references.ipynb  Example.ipynb  Example_guess_epsilon.ipynb  Examples_Session.py  Examples_epsilon.ipynb  Examples_stars.ipynb  Mix Dev.ipynb  TFexample.ipynb  dev_guess_epsilon.ipynb  example-docstrings.rst  example-modeID.ipynb  example-peakbag.ipynb  example-plotting.ipynb  example-session.ipynb  example-star.ipynb  example_docstrings.rst  example_githubworkflow.rst  example_unittests.rst  mytgts.csv  myts.asciifile  pb.pickle  peakbag_example.ipynb
Inspector/: backup.csv  backup2.csv  checked.csv  inspector.py  inspectr.py  (+5 more)
(+241 files in other folders)
